test/data/syntax-errors/else-without-if-conditional.jen
else:
    print('this requires a base conditional!')
